--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
 port=4000
-AWS_ACCESS_KEY_ID="AKIAZRADNXDFEI4IPP5T"
-AWS_SECRET_ACCESS_KEY="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" 
 
 BUCKET_NAME = "bsaas"
-bsaas_location ='BSaas/Test1/'
+bsaas_location ='BSaas/Test1//arun/'
